<resources>
    <string name="app_name">PopularMovies</string>

    <string name="my_preferences">MyPreferences</string>

    <string name="most_popular">MOST POPULAR</string>
    <string name="top_rated">TOP RATED</string>
    <string name="favorites">FAVORITES</string>

    <string name="poster_path_base_url">http://image.tmdb.org/t/p/w185/</string>

    <string name="id">id</string>
    <string name="original_title">original_title</string>
    <string name="release_date">release_date</string>
    <string name="vote_average">vote_average</string>
    <string name="plot_synopsis">overview</string>
    <string name="poster_jpg">poster_path</string>

    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>

    <string name="QUERY_POPULAR">popular</string>
    <string name="QUERY_TOP_RATED">top_rated</string>
    <string name="QUERY_FAVORITES">favorites</string>

    <string name="no_trailers">There are no trailers to display.</string>
    <string name="no_reviews">There are no reviews to display.</string>

    <string name="add_to_favorites">Add to Favorites</string>
    <string name="added_to_favorites">Successfully added to Favorites</string>
    <string name="not_added_to_favorites">Add to favorites was unsuccessful</string>

    <string name="favorited">Favorited</string>

    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="removed_from_favorites">Successfully removed from Favorites</string>
    <string name="not_removed_from_favorites">Remove from favorites was unsuccessful</string>

    <string name="videos_path">/videos</string>
    <string name="reviews_path">/reviews</string>

</resources>
