<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/no_margin"
        tools:context=".MovieDetailActivity"
        android:baselineAligned="false">

        <TextView
            android:id="@+id/title"
            tools:text="Forrest Gump"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:textSize="@dimen/size_huge"
            android:textColor="@color/white"
            android:background="@drawable/gradient"
            android:padding="@dimen/margin_medium"
            android:gravity="center_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_medium">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="@dimen/poster_width"
                android:layout_height="@dimen/poster_height" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_large"
                android:paddingRight="@dimen/margin_large">

                <TextView
                    android:id="@+id/release_date"
                    tools:text="2017"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_huge"/>

                <TextView
                    android:id="@+id/vote_average"
                    tools:text="9 / 10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_large" />

                <TextView
                    android:id="@+id/favorited"
                    android:text="@string/favorited"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/size_medium" />

                <Button
                    android:id="@+id/toggle_favorites_button"
                    android:text="@string/add_to_favorites"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="toggleFavoritesClicked"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/plot_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:paddingBottom="@dimen/margin_medium"
            android:textSize="@dimen/size_medium"/>

        <TextView
            android:id="@+id/trailers_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/trailers"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:paddingBottom="@dimen/margin_medium"
            android:textSize="@dimen/size_huge"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trailer_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/no_trailers"
            android:text="@string/no_trailers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:paddingBottom="@dimen/margin_large"
            android:textSize="@dimen/size_medium" />

        <TextView
            android:id="@+id/reviews_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reviews"
            android:paddingLeft="@dimen/margin_medium"
            android:paddingRight="@dimen/margin_medium"
            android:paddingBottom="@dimen/margin_medium"
            android:textSize="@dimen/size_huge"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/review_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/no_reviews"
            android:text="@string/no_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_large"
            android:paddingBottom="@dimen/margin_medium"
            android:textSize="@dimen/size_medium"/>

    </LinearLayout>

</ScrollView>
